buildscript {
	ext {
		spockVersion = "1.0-groovy-2.4"
		groovyVersion = "2.4.1"
		springFrameworkVersion = "4.2.0.RELEASE"
        guavaVersion = "18.0"
        dbunitVersion = "2.5.1"
        springBootVersion = '1.2.6.RELEASE'
        springHateoasVersion = '0.19.0.RELEASE'
        springDataVersion = '1.11.0.RELEASE'
        jacksonVersion = '2.5.1'
        springPluginVersion = '1.2.0.RELEASE'

        dblibs = [
                'com.h2database:h2:1.4.185',
                'org.apache.derby:derby:10.11.1.1',
                'org.apache.derby:derbyclient:10.11.1.1'
        ]
    }

    repositories {
        maven { url "https://repo.spring.io/libs-release" }
        mavenLocal()
        mavenCentral()
    }

    dependencies {
        classpath "org.springframework.boot:spring-boot-gradle-plugin:1.2.2.RELEASE"
        classpath dblibs
		classpath "org.flywaydb:flyway-gradle-plugin:3.2.1"
    }
}

ext.db = hasProperty("db") ? db : "h2"

// apply some plugins
apply from: "gradle/jdbc.gradle"
apply from: "gradle/ddlGen.gradle"
apply from: "gradle/flyway.gradle"

allprojects {
    repositories {
        maven { url "https://repo.spring.io/libs-release" }
        mavenLocal()
        mavenCentral()
    }

    apply plugin: 'java'
    apply plugin: 'groovy'
    apply plugin: 'eclipse'
    apply plugin: 'idea'

    dependencies {
        compile "org.codehaus.groovy:groovy-all:${groovyVersion}"
		compile "org.springframework:spring-jdbc:${springFrameworkVersion}"
		compile "org.springframework:spring-tx:${springFrameworkVersion}"
		compile "org.springframework:spring-context-support:${springFrameworkVersion}"
		compile "org.springframework:spring-context:${springFrameworkVersion}"
		compile "com.google.guava:guava:${guavaVersion}"

        testCompile "junit:junit:4.11"
        testCompile "org.springframework:spring-test:${springFrameworkVersion}"
        testCompile "org.spockframework:spock-core:${spockVersion}"
        testCompile "org.spockframework:spock-spring:${spockVersion}"
        testCompile "org.hamcrest:hamcrest-core:1.3" // only necessary if Hamcrest matchers are used
        testCompile("org.dbunit:dbunit:${dbunitVersion}") {
            exclude group: "junit"
        }
        
        testRuntime "cglib:cglib-nodep:3.1"          // allows mocking of classes (in addition to interfaces)
        testRuntime "org.objenesis:objenesis:2.1"    // allows mocking of classes without default constructor (together with CGLIB)
    }
}

dependencies {
	compile gradleApi()
	compile localGroovy()

    compile project('modules:model')
    compile project('modules:infrastructure')
    compile project('modules:service')
    compile project('modules:rest')
}

tasks.withType(JavaCompile) { options.encoding = 'UTF-8' }

sourceCompatibility = 1.8
